push design page

--- a/home.html
+++ b/home.html
@@ -16,10 +16,6 @@
             background-size: cover;
             position: relative;
         }
-
-        .intro-video {
-            width: 100%;
-        }
     
     </style>
     
@@ -46,7 +42,7 @@
     <!-- Content -->
     <div class="container">
 
-        <img src="Placeholder/Intro-video.png" class="intro-video" />
+        <img src="Placeholder/Intro-video.png" class="video" />
 
         <h1>Homes That Work For Us</h1>
 
@@ -94,8 +90,6 @@ connection.</p>
             <div class="split right">
                  <img src="IMG/Home/innovative-design.jpg">
             </div>
-        </div>
-        <div class="row">
             <div class="split left">
                 <img src="Placeholder/placeholder-img.png">
             </div>
