push design update

--- a/design.html
+++ b/design.html
@@ -37,7 +37,7 @@
 
         <img src="Placeholder/design-video.png" class="video" />
         <div class="row">
-            <div class="clear">
+            <div class="column">
                 <div class="split left">
                     <img src="IMG/Design/design-philosophy.jpg">
                 </div>
@@ -46,10 +46,11 @@
                         <h2>Design Philosophy</h2>
                         <p class="body-md"> Lily Pad is designed to last two centuries. The space is built for community. People can gather in sitting circles and interact organically by centralizing walking paths. Spaces are modular, reconfigurable, and useful—catering to all your needs. High-quality materials and well-designed systems will save you money, be more comfortable, and be a great experience.</p>
                     </div>
-                </div>
-                
+                </div>     
             </div>
-            <div class="clear">
+        </div>
+        <div class="row">
+            <div class="column">
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Welcoming Public Front</h2>
@@ -60,7 +61,9 @@
                     <img src="Placeholder/before-after.png">
                 </div>
             </div>
-            <div class="clear">
+        </div>
+        <div class="row">
+            <div class="column">
                 <div class="split left">
                      <img src="IMG/Design/edible-garden.jpg">
                 </div>
@@ -84,7 +87,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="clear">
+            <div class="column">
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Community First</h2>
@@ -96,7 +99,9 @@
                      <img src="Placeholder/people-gathering.png">
                 </div>
             </div>
-            <div class="clear">
+        </div>
+        <div class="row">
+            <div class="column">
                 <div class="split left">
                     <img src="IMG/Design/no-voc.jpg">
                 </div>
@@ -110,7 +115,9 @@
                     </div>
                 </div>
             </div>
-            <div class="clear">
+        </div>
+        <div class="row">
+            <div class="column">
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Bringing the Outside In</h2>
@@ -123,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div class="bottom-nav-wrapper row">
+        <div class="bottom-nav-wrapper">
             <button  class="float-right bottom-nav">
                         <a href="experience.html">Experience ></a>
             </button>
