--- a/nav-menu.html
+++ b/nav-menu.html
@@ -6,24 +6,24 @@
 <nav class="pushy pushy-left">
     <div class="pushy-content">
         <ul>
-            <li class="pushy-link"><a href="#">Design</a></li>
-            <li class="pushy-link"><a href="#">Experience</a></li>
+            <li class="pushy-link"><a href="design.html">Design</a></li>
+            <li class="pushy-link"><a href="experience.html">Experience</a></li>
             <!-- Submenu -->
             <li class="pushy-submenu">
                 <button>Systems <i id="nav-dropdown"></i></button>
                 <ul>
                 <hr>
-                    <li class="pushy-link"><a href="#">Electricity</a></li>
-                    <li class="pushy-link"><a href="#">Water</a></li>
-                    <li class="pushy-link"><a href="#">Air Handling</a></li>
-                    <li class="pushy-link"><a href="#">Temp. Control</a></li>
-                    <li class="pushy-link"><a href="#">Transportation</a></li>
-                    <li class="pushy-link"><a href="#">Landscaping</a></li>
+                    <li class="pushy-link"><a href="electricity.html">Electricity</a></li>
+                    <li class="pushy-link"><a href="water.html">Water</a></li>
+                    <li class="pushy-link"><a href="air.html">Air Handling</a></li>
+                    <li class="pushy-link"><a href="temp.html">Temp. Control</a></li>
+                    <li class="pushy-link"><a href="transport.html">Transportation</a></li>
+                    <li class="pushy-link"><a href="landscape.html">Landscaping</a></li>
                 <hr>
                 </ul>
             </li>
-            <li class="pushy-link"><a href="#">Resources</a></li>
-            <li class="pushy-link"><a href="#">Contact Us</a></li>
+            <li class="pushy-link"><a href="resources.html">Resources</a></li>
+            <li class="pushy-link"><a href="contact.html">Contact Us</a></li>
         </ul>
     </div>
 </nav>
