--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
     <!-- Content -->
     <div class="container">
 
-        <img src="Placeholder/design-video.png" class="video" />
+        <img src="Placeholder/experience-video.png" class="video" />
         <div class="row">
             <div class="column">
                 <div class="split left">
@@ -46,14 +46,14 @@
                 </div>
 
                 <div class="split right">
-                    <img src="Placeholder/placeholder-img.png">
+                    <img src="IMG/Experience/perfect-lighting.jpg">
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="Placeholder/placeholder-img.png">
+                    <img src="Placeholder/playing-drums.png">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="split right">
-                    <img src="Placeholder/placeholder-img.png">
+                    <img src="Placeholder/looking-relaxed.png">
                 </div>
             </div>
         </div>
@@ -137,7 +137,7 @@
         </div>
         <div class="bottom-nav-wrapper">
             <button  class="float-left bottom-nav">
-                        <a href="experience.html">< Experience</a>
+                        <a href="design.html">< Design</a>
             </button>
             <button  class="float-right bottom-nav">
                         <a href="systems.html">Systems ></a>
