--- a/home.html
+++ b/home.html
@@ -76,32 +76,38 @@ connection.</p>
 
     <div class="container">
         <div class="row">
-            <div class="split left">
-                <div class="copy-block">
-                    <h2>Innovative Design</h2>
-                    <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
+            <div class="column">
+                <div class="split left">
+                    <div class="copy-block">
+                        <h2>Innovative Design</h2>
+                        <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
-                    <button  class="float-right learn-more">
-                        <a href="design.html">Learn More ></a>
-                    </button>
+                        <button  class="float-right learn-more">
+                            <a href="design.html">Learn More ></a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="split right">
+                     <img src="IMG/Home/innovative-design.jpg">
                 </div>
             </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <div class="split left">
+                    <img src="Placeholder/placeholder-img.png">
+                </div>
 
-            <div class="split right">
-                 <img src="IMG/Home/innovative-design.jpg">
-            </div>
-            <div class="split left">
-                <img src="Placeholder/placeholder-img.png">
-            </div>
+                <div class="split right">
+                    <div class="copy-block">
+                        <h2>Great Experience</h2>
+                        <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, LilyPad is home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
 
-            <div class="split right">
-                <div class="copy-block">
-                    <h2>Great Experience</h2>
-                    <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, LilyPad is home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
-
-                    <button  class="float-right learn-more">
-                        <a href="experience.html">Learn More ></a>
-                    </button>
+                        <button  class="float-right learn-more">
+                            <a href="experience.html">Learn More ></a>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
