--- a/nav-menu.html
+++ b/nav-menu.html
@@ -6,6 +6,7 @@
 <nav class="pushy pushy-left">
     <div class="pushy-content">
         <ul>
+            <li class="pushy-link"><a href="home.html">Home</a></li>
             <li class="pushy-link"><a href="design.html">Design</a></li>
             <li class="pushy-link"><a href="experience.html">Experience</a></li>
             <!-- Submenu -->
