push systems page

--- a/nav-menu.html
+++ b/nav-menu.html
@@ -17,9 +17,9 @@
                     <li class="pushy-link"><a href="electricity.html">Electricity</a></li>
                     <li class="pushy-link"><a href="water.html">Water</a></li>
                     <li class="pushy-link"><a href="air.html">Air Handling</a></li>
-                    <li class="pushy-link"><a href="temp.html">Temp. Control</a></li>
-                    <li class="pushy-link"><a href="transport.html">Transportation</a></li>
-                    <li class="pushy-link"><a href="landscape.html">Landscaping</a></li>
+                    <li class="pushy-link"><a href="temp.html">Climate Control</a></li>
+<!--                     <li class="pushy-link"><a href="transport.html">Transportation</a></li>
+                    <li class="pushy-link"><a href="landscape.html">Landscaping</a></li> -->
                 <hr>
                 </ul>
             </li>
