--- a/nav-menu.html
+++ b/nav-menu.html
@@ -24,7 +24,7 @@
                 </ul>
             </li>
             <li class="pushy-link"><a href="resources.html">Resources</a></li>
-            <li class="pushy-link"><a href="contact.html">Contact Us</a></li>
+            <li class="pushy-link"><a href="contact-us.html">Contact Us</a></li>
         </ul>
     </div>
 </nav>
