--- a/home.html
+++ b/home.html
@@ -8,13 +8,8 @@
     <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
 
     <style type="text/css">
-        .vr-hero {
+        #vr-hero {
             background-image: url("Placeholder/VR-placeholder.png");
-            height: 500px;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
         }
     
     </style>
@@ -37,7 +32,7 @@
         </div>
     </nav>
 
-    <div class="vr-hero"></div>
+    <div class="hero-banner" id="vr-hero"></div>
 
     <!-- Content -->
     <div class="container">
