--- a/Systems/water.html
+++ b/Systems/water.html
@@ -3,14 +3,14 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Electricity</title>
+    <title>Water</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../CSS/global.css" media="screen">
 
     <style type="text/css">
 
-        #electricity-infographic {
-            background-image: url("../IMG/Systems/Electricity/electricity-infographic.png");
+        #water-infographic {
+            background-image: url("../IMG/Systems/Water/greywater-infographic.png");
             height: 35vw;
             width: 100%;
         }
@@ -30,26 +30,27 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">Electricity</div>
+            <div id="nav-title">Water</div>
 
             <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
-    <div class="hero-banner" id="electricity-infographic"></div>
+    <div class="hero-banner" id="water-infographic"></div>
 
     <!-- Content -->
     <div class="container">
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Electricity/energy-meter.jpg">
+                    <img src="../IMG/Systems/Water/greywater-pipes.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
-                        <h2>100% Electric</h2>
-                        <p class="body-md">LilyPad has enough energy for all your needs. Charge several electric cars, a heat pump, a water heater, washer/dryer, induction cooktop, combination oven, and more. Make extra money by selling back excess energy to the grid. Usher in the end of the fossil fuel era– take control over your life and be your own power plant.</p>
+                        <h2>Greywater Reuse</h2>
+                        <p class="body-md"> Stop pouring your wastewater, quite literally, down the drain. By reusing water you are not only saving money from your water bill– you’re also preparing for years of drought and providing automatic irrigation. Each sink has a convenient switch that remotely diverts the drain to the sewer if you need to get rid of some nasty chemicals.</p>
                     </div>
+                    <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
                 </div>
             </div>
         </div>
@@ -57,13 +58,13 @@
             <div class="column">
                 <div class="split left">
                     <div class="copy-block">
-                        <h2>Sun Power</h2>
-                        <p class="body-md">LilyPad has a massive thirteen kilowatt solar array that powers everything in their home. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you. Be your own power plant.</p>
+                        <h2>Hot Water Recirculating Loops</h2>
+                        <p class="body-md">Ordinarily, every time you turn on a hot faucet you have to wait for the cold water to be cleared out. This not only wastes water and time, but is uncomfortable when while you’re waiting naked in the shower. Motion-detectors automagically turn on the recircirculating loop giving you instant hot water.</p>
                     </div>
                     <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
                 </div>
                 <div class="split right">
-                    <img src="../IMG/Systems/Electricity/solar-panels.jpg">
+                    <img src="../Placeholder/placeholder-img.png">
                 </div>     
             </div>
         </div>
@@ -75,15 +76,13 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Electricity/car-charging.jpg">
+                    <img src="../IMG/Systems/Water/water-efficient.jpg">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
-                        <h2>Electric Car Charging</h2>
-                        <p class="body-md">Now you can go electric and not ever have to stop and pay for gas. It’s a truly empowering feeling to drive on free clean sunshine you’ve produced.</p>
+                        <h2>Water-efficient Fixtures</h2>
+                        <p class="body-md">Highly-efficient water fixtures paired with a hot water recirculating loop make for a great experience. The shower knobs have separate controls for temperature and volume, so gone are the days when barely adjusting the knob creates dramatic swings in temperature. Get the perfect temperature every time, instantly. The shower heads also features an easy pause push-button letting you easily and conveniently save water.</p>
                     </div>
-                    <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
-
                 </div>
             </div>
         </div>
@@ -91,22 +90,22 @@
             <div class="column">
                 <div class="split left">
                     <div class="copy-block">
-                        <h2>L.E.D. Lighting</h2>
-                        <p class="body-md">Have state-of-the-art lighting and the perfect lighting for every situation. There’s gallery lighting to proudly display your artwork, task lighting to help you focus on a project, wall washing lighting to give a nice overall ambiance and motion-detected path lighting so you don’t kick your pets or wake up your spouse in the middle of the night.</p>
+                        <h2>Rainwater Capture</h2>
+                        <p class="body-md">Instead of runoff from your roof going down the drain, rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as gray water captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape. </p>
                     </div>
                 </div>
                 <div class="split right">
-                     <img src="../IMG/Systems/Electricity/perfect-lighting.jpg">
+                     <img src="../IMG/Systems/Water/rainwater-capture.jpg">
                 </div>
             </div>
         </div>
     
         <div class="bottom-nav-wrapper">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/climate.html">< Climate Control</a>
+                        <a href="../Systems/electricity.html">< Electricity</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/water.html">Water ></a>
+                        <a href="../Systems/sound-air.html">Sound &amp; Air Handling ></a>
             </button>
         </div>
     </div>
