--- a/nav-menu.html
+++ b/nav-menu.html
@@ -14,7 +14,7 @@
                 <button>Systems <i id="nav-dropdown"></i></button>
                 <ul>
                 <hr>
-                    <li class="pushy-link"><a href="electricity.html">Electricity</a></li>
+                    <li class="pushy-link"><a href="../Systems/electricity.html">Electricity</a></li>
                     <li class="pushy-link"><a href="water.html">Water</a></li>
                     <li class="pushy-link"><a href="air.html">Air Handling</a></li>
                     <li class="pushy-link"><a href="temp.html">Climate Control</a></li>
