--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -3,14 +3,14 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Electricity</title>
+    <title>Sound &amp; Air Handling</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../CSS/global.css" media="screen">
 
     <style type="text/css">
 
-        #electricity-infographic {
-            background-image: url("../IMG/Systems/Electricity/electricity-infographic.png");
+        #air-infographic {
+            background-image: url("../IMG/Systems/Air/air-handling-infographic.png");
             height: 35vw;
             width: 100%;
         }
@@ -30,26 +30,27 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">Electricity</div>
+            <div id="nav-title">Sound &amp; Air Handling</div>
 
             <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
-    <div class="hero-banner" id="electricity-infographic"></div>
+    <div class="hero-banner" id="air-infographic"></div>
 
     <!-- Content -->
     <div class="container">
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Electricity/energy-meter.jpg">
+                    <img src="../Placeholder/placeholder-img.png">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
-                        <h2>100% Electric</h2>
-                        <p class="body-md">LilyPad has enough energy for all your needs. Charge several electric cars, a heat pump, a water heater, washer/dryer, induction cooktop, combination oven, and more. Make extra money by selling back excess energy to the grid. Usher in the end of the fossil fuel era– take control over your life and be your own power plant.</p>
+                        <h2>Heat Recovery Ventilation</h2>
+                        <p class="body-md">A Heat Recovery Ventilation is a device built into your ventilation system. The HRV captures heat in the air that is being exhausted to the outdoors. Paired with a high-efficiency heating and cooling system, an HRV dramatically reduces the energy needed to heat or cool your home while keeping your air really fresh, filtered, and oxygenated.</p>
                     </div>
+                    <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
                 </div>
             </div>
         </div>
@@ -57,13 +58,14 @@
             <div class="column">
                 <div class="split left">
                     <div class="copy-block">
-                        <h2>Sun Power</h2>
-                        <p class="body-md">LilyPad has a massive thirteen kilowatt solar array that powers everything in their home. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you. Be your own power plant.</p>
+                        <h2>Air Sealing</h2>
+                        <p class="body-md">As your home increases in efficiency and your total insulation improves, it also becomes important to seal the building well to prevent additional heat loss. By running a blower door test on your home you can identify leakages and improve the air sealing of your home. The better your home is sealed, the more you can control and create intentionally ventilated areas.</p>
                     </div>
                     <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
                 </div>
                 <div class="split right">
-                    <img src="../IMG/Systems/Electricity/solar-panels.jpg">
+                    <img src="../IMG/Systems/Air/air-sealing.jpg" />
+                </div>
                 </div>     
             </div>
         </div>
@@ -75,15 +77,13 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="../IMG/Systems/Electricity/car-charging.jpg">
+                    <img src="../Placeholder/placeholder-img.png">
                 </div>
                 <div class="split right">
                     <div class="copy-block">
-                        <h2>Electric Car Charging</h2>
-                        <p class="body-md">Now you can go electric and not ever have to stop and pay for gas. It’s a truly empowering feeling to drive on free clean sunshine you’ve produced.</p>
+                        <h2>Remote Hood Fan</h2>
+                        <p class="body-md">Most homes have a noisy hood fan over your stovetop. This can be loud and annoying and make conversation difficult. It’s important to have the hood fan running while cooking as it ventilates out toxic chemicals from your breathing air. While many people will simply not run the hood fan because of the annoying sound, a remote hood fan is a better solution. It's super quiet so you can keep the air fresh and the conversation flowing.</p>
                     </div>
-                    <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
-
                 </div>
             </div>
         </div>
@@ -91,22 +91,22 @@
             <div class="column">
                 <div class="split left">
                     <div class="copy-block">
-                        <h2>L.E.D. Lighting</h2>
-                        <p class="body-md">Have state-of-the-art lighting and the perfect lighting for every situation. There’s gallery lighting to proudly display your artwork, task lighting to help you focus on a project, wall washing lighting to give a nice overall ambiance and motion-detected path lighting so you don’t kick your pets or wake up your spouse in the middle of the night.</p>
+                        <h2>Low to no VOCs</h2>
+                        <p class="body-md"> VOCs or volatile organic compounds are nasty chemicals that are offgased in many paints, furnitures, and building materials. When these toxic compounds leak into the air and combine with other pollutants from cooking, candles, or even just breathing–  indoor air quality can be ten times worse than outdoor air. By using materials that have low to no VOCs and having great filtered air, you will stay healthy, alert, and happy.</p>
                     </div>
                 </div>
                 <div class="split right">
-                     <img src="../IMG/Systems/Electricity/perfect-lighting.jpg">
+                     <img src="../IMG/Systems/Air/no-voc.jpg">
                 </div>
             </div>
         </div>
     
         <div class="bottom-nav-wrapper">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/climate.html">< Climate Control</a>
+                        <a href="../Systems/water.html">< Water</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/water.html">Water ></a>
+                        <a href="../Systems/climate.html">Climate Control ></a>
             </button>
         </div>
     </div>
