--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -60,7 +60,7 @@
                         <h2>Sun Power</h2>
                         <p class="body-md">LilyPad has a massive thirteen kilowatt solar array that powers everything in their home. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you. Be your own power plant.</p>
                     </div>
-                    <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
+                    <button class="float-right learn-more" onclick="location.href='solar-panels.html'" type="button">Learn More ></button>
                 </div>
                 <div class="split right">
                     <img src="../IMG/Systems/Electricity/solar-panels.jpg">
@@ -82,7 +82,7 @@
                         <h2>Electric Car Charging</h2>
                         <p class="body-md">Now you can go electric and not ever have to stop and pay for gas. It’s a truly empowering feeling to drive on free clean sunshine you’ve produced.</p>
                     </div>
-                    <button class="float-right learn-more" onclick="location.href=''" type="button">Learn More ></button>
+                    <button class="float-right learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More ></button>
 
                 </div>
             </div>
