--- a/systems.html
+++ b/systems.html
@@ -56,14 +56,14 @@
                 </div>
                 <div class="split right">
                     <div class="image-text-wrapper">
-                        <a href="Systems/temp-control.html"><img src="IMG/Systems/temp-control.jpg"></a>
+                        <a href="Systems/climate.html"><img src="IMG/Systems/temp-control.jpg"></a>
                         <div class="image-text-overlay" id="climate-control">Climate Control</div>
                     </div>
                 </div>     
             </div>
         </div>
         <div class="image-text-wrapper">
-            <a href="Systems/air-sound.html"><img src="Placeholder/air-sound-system.png" /></a>
+            <a href="Systems/sound-air.html"><img src="Placeholder/air-sound-system.png" /></a>
 <!--             <div class="image-text-overlay">Air &amp; Sound</div>
  -->        </div>
 <!--         <div class="row">
