fix system pages home link

--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -32,7 +32,7 @@
             
             <div id="nav-title">Electricity</div>
 
-            <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
+            <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
