--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -26,7 +26,7 @@
             
             <div id="nav-title">Thermal, Moisture, &amp; Air Management</div>
 
-            <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
+            <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
