--- a/Systems/ev-charging.html
+++ b/Systems/ev-charging.html
@@ -26,7 +26,7 @@
             
             <div id="nav-title">E.V. Charging</div>
 
-            <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
+            <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
