--- a/Systems/recirc-loop.html
+++ b/Systems/recirc-loop.html
@@ -26,7 +26,7 @@
             
             <div id="nav-title">Hot Water Recirculating Loop</div>
 
-            <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
+            <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
