--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -32,7 +32,7 @@
             
             <div id="nav-title">Sound &amp; Air Handling</div>
 
-            <a href="index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
+            <a href="../index.html""><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
