--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -112,11 +112,11 @@
 
 </body>
 
-    <script src="../JS/global.js"></script>
+   <script src="../JS/global.js"></script>
     <script type="text/javascript">
     $(function(){
-          $("#nav-menu").load("nav-menu.html");
-          $("#footer").load("footer.html"); 
+          $("#nav-menu").load("../nav-menu.html");
+          $("#footer").load("../footer.html"); 
         });
     </script>
 
