--- a/Systems/ev-charging.html
+++ b/Systems/ev-charging.html
@@ -64,8 +64,8 @@
     <script src="../JS/global.js"></script>
     <script type="text/javascript">
     $(function(){
-          $("#nav-menu").load("nav-menu.html");
-          $("#footer").load("footer.html"); 
+          $("#nav-menu").load("../nav-menu.html");
+          $("#footer").load("../footer.html"); 
         });
     </script>
 
