--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -119,9 +119,10 @@
     <script src="../JS/global.js"></script>
     <script type="text/javascript">
     $(function(){
-          $("#nav-menu").load("nav-menu.html");
-          $("#footer").load("footer.html"); 
+          $("#nav-menu").load("../nav-menu.html");
+          $("#footer").load("../footer.html"); 
         });
     </script>
+
 
 </html>
