--- a/nav-menu.html
+++ b/nav-menu.html
@@ -16,8 +16,8 @@
                 <hr>
                     <li class="pushy-link"><a href="../Systems/electricity.html">Electricity</a></li>
                     <li class="pushy-link"><a href="water.html">Water</a></li>
-                    <li class="pushy-link"><a href="air.html">Air Handling</a></li>
-                    <li class="pushy-link"><a href="temp.html">Climate Control</a></li>
+                    <li class="pushy-link"><a href="sound-air.html">Air Handling</a></li>
+                    <li class="pushy-link"><a href="climate.html">Climate Control</a></li>
 <!--                     <li class="pushy-link"><a href="transport.html">Transportation</a></li>
                     <li class="pushy-link"><a href="landscape.html">Landscaping</a></li> -->
                 <hr>
