--- a/nav-menu.html
+++ b/nav-menu.html
@@ -1,31 +1,31 @@
 
 <head>
-    <link rel="stylesheet" type="text/css" href="CSS/pushy.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../CSS/pushy.css" media="screen">
 </head>
     <!-- Pushy Menu -->
 <nav class="pushy pushy-left">
     <div class="pushy-content">
         <ul>
-            <li class="pushy-link"><a href="home.html">Home</a></li>
-            <li class="pushy-link"><a href="design.html">Design</a></li>
-            <li class="pushy-link"><a href="experience.html">Experience</a></li>
+            <li class="pushy-link"><a href="../home.html">Home</a></li>
+            <li class="pushy-link"><a href="../design.html">Design</a></li>
+            <li class="pushy-link"><a href="../experience.html">Experience</a></li>
             <!-- Submenu -->
             <li class="pushy-submenu">
                 <button>Systems <i id="nav-dropdown"></i></button>
                 <ul>
                 <hr>
                     <li class="pushy-link"><a href="../Systems/electricity.html">Electricity</a></li>
-                    <li class="pushy-link"><a href="water.html">Water</a></li>
-                    <li class="pushy-link"><a href="sound-air.html">Air Handling</a></li>
-                    <li class="pushy-link"><a href="climate.html">Climate Control</a></li>
+                    <li class="pushy-link"><a href="../Systems/water.html">Water</a></li>
+                    <li class="pushy-link"><a href="../Systems/sound-air.html">Air Handling</a></li>
+                    <li class="pushy-link"><a href="../Systems/climate.html">Climate Control</a></li>
 <!--                     <li class="pushy-link"><a href="transport.html">Transportation</a></li>
                     <li class="pushy-link"><a href="landscape.html">Landscaping</a></li> -->
                 <hr>
                 </ul>
             </li>
-            <li class="pushy-link"><a href="resources.html">Resources</a></li>
-            <li class="pushy-link"><a href="contact-us.html">Contact Us</a></li>
+            <li class="pushy-link"><a href="../resources.html">Resources</a></li>
+            <li class="pushy-link"><a href="../contact-us.html">Contact Us</a></li>
         </ul>
     </div>
 </nav>
-<script src="JS/pushy.js"></script>
+<script src="../JS/pushy.js"></script>
