small copy tweaks

--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -91,11 +91,24 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Individual Room Temperature</h2>
-                        <p class="body-md">Most homes have a single temperature set point and Dad will be trying to keep the heater off to save money while Mom will be shivering because she runs cooler. Lily Pad solves this with the ability to individually control the heating set points of each room. By insulating the interior walls as well as the external and having individual heating/cooling units in each room you can set the temperature to be perfect and comfortable for everybody.</p>
+                        <p class="body-md">Most homes have a single thermostat so Dad might be trying to keep the heater off to save money while Mom will be shivering because she runs cooler. This can be solved by allowing individual control of heating set points for each room. Also, by insulating the interior walls as well as well as having great overall external insulation, your home will be perfect and comfortable for everybody.</p>
                     </div>
                 </div>
                 <div class="split right">
                      <img src="../Placeholder/placeholder-img.png">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <div class="split left">
+                    <img src="../Placeholder/placeholder-img.png">
+                </div>
+                <div class="split right">
+                    <div class="copy-block">
+                        <h2>Building Orientation</h2>
+                        <p class="body-md">Building orientation is another critical factor to capture the most passive solar sunlight in the winter, while avoiding excessive heat in the summer. A conventional subdivision has lots that have a variety of North/South orientations. When choosing a building and a lot, it’s important to note which side will be south-facing (in the northern hemisphere) to capture the most passive solar heat.</p>
+                    </div>
                 </div>
             </div>
         </div>
