--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -58,7 +58,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Sun Power</h2>
-                        <p class="body-md">LilyPad has a massive thirteen kilowatt solar array that powers everything in their home. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you. Be your own power plant.</p>
+                        <p class="body-md">LilyPad has a massive thirteen kilowatt solar array that powers everything in their home. This includes heating, cooling, state-of-the-art appliances, electric cars, and still has plenty of excess to sell back to the grid. Stop paying for electricity, heating, and gasoline and instead have your energy company pay you.</p>
                     </div>
                     <button class="float-right learn-more" onclick="location.href='solar-panels.html'" type="button">Learn More ></button>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Electric Car Charging</h2>
-                        <p class="body-md">Now you can go electric and not ever have to stop and pay for gas. It’s a truly empowering feeling to drive on free clean sunshine you’ve produced.</p>
+                        <p class="body-md">Solar power enables you to be your own power plant. Now you can go electric and not ever have to stop and pay for gas, deal with the constant maintenance headaches of a gas engine, or worry about the emissions or smog you’re creating around your children. It’s a truly empowering feeling to drive on free clean sunshine you’ve produced.</p>
                     </div>
                     <button class="float-right learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More ></button>
 
@@ -92,7 +92,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>L.E.D. Lighting</h2>
-                        <p class="body-md">Have state-of-the-art lighting and the perfect lighting for every situation. There’s gallery lighting to proudly display your artwork, task lighting to help you focus on a project, wall washing lighting to give a nice overall ambiance and motion-detected path lighting so you don’t kick your pets or wake up your spouse in the middle of the night.</p>
+                        <p class="body-md">L.E.D. lighting is efficient, long-lasting, aesthetically pleasing, and comes in the same variety of styles that you’d expect from traditional lighting, like filament bulbs. Have perfect lighting for every situation: gallery lighting for artwork, task lighting for projects, wall washers for ambiance and motion-detection path lighting lets you find your way in the night without disturbing people or pets.</p>
                     </div>
                 </div>
                 <div class="split right">
