--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -59,7 +59,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Air Sealing</h2>
-                        <p class="body-md">As your home increases in efficiency and your total insulation improves, it also becomes important to seal the building well to prevent additional heat loss. By running a blower door test on your home you can identify leakages and improve the air sealing of your home. The better your home is sealed, the more you can control and create intentionally ventilated areas.</p>
+                        <p class="body-md">As your home increases in efficiency and your total insulation improves, it also becomes important to seal the building well to prevent additional heat loss. A blower door test can identify leakages and improve air sealing. The better your home is sealed, the more you can control both temperature and ventilation.</p>
                     </div>
                     <button class="float-right learn-more" onclick="location.href='climate-management.html#air-sealing'" type="button">Learn More ></button>
                 </div>
@@ -82,7 +82,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Remote Hood Fan</h2>
-                        <p class="body-md">Most homes have a noisy hood fan over your stovetop. This can be loud and annoying and make conversation difficult. It’s important to have the hood fan running while cooking as it ventilates out toxic chemicals from your breathing air. While many people will simply not run the hood fan because of the annoying sound, a remote hood fan is a better solution. It's super quiet so you can keep the air fresh and the conversation flowing.</p>
+                        <p class="body-md">Most homes have a noisy hood fan over your stove top that's annoying and makes conversation difficult. However, it’s important to have the hood fan running while cooking as it expels toxic chemicals. While many people will simply not run the hood fan because of the loud annoyance, a remote hood fan is a better solution. It's super quiet so it keeps the air fresh and the conversation flowing.</p>
                     </div>
                 </div>
             </div>
