--- a/Systems/water.html
+++ b/Systems/water.html
@@ -81,7 +81,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Water-efficient Fixtures</h2>
-                        <p class="body-md">Highly-efficient water fixtures paired with a hot water recirculating loop make for a great experience. The shower knobs have separate controls for temperature and volume, so gone are the days when barely adjusting the knob creates dramatic swings in temperature. Get the perfect temperature every time, instantly. The shower heads also features an easy pause push-button letting you easily and conveniently save water.</p>
+                        <p class="body-md">Highly-efficient water fixtures paired with a hot water recirculating loop create a great experience. The shower knobs have separate controls for temperature and volume, so get the perfect temperature every time, instantly. The shower heads also features an easy pause push-button letting you easily and conveniently save water.</p>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Rainwater Capture</h2>
-                        <p class="body-md">Instead of runoff from your roof going down the drain, rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as gray water captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape. </p>
+                        <p class="body-md">Rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as gray water captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape.</p>
                     </div>
                 </div>
                 <div class="split right">
