--- a/design.html
+++ b/design.html
@@ -42,7 +42,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Design Philosophy</h2>
-                        <p class="body-md"> Lily Pad is designed to last two centuries. The space is built for community. People can gather in sitting circles and interact organically by centralizing walking paths. Spaces are modular, reconfigurable, and useful—catering to all your needs. High-quality materials and well-designed systems will save you money, be more comfortable, and be a great experience.</p>
+                        <p class="body-md"> LilyPad is designed to last two centuries. The space is built for community. People can gather in sitting circles and interact organically by centralizing walking paths. Spaces are modular, reconfigurable, and useful—catering to all your needs. High-quality materials and well-designed systems will save you money, be more comfortable, and be a great experience.</p>
                     </div>
                 </div>     
             </div>
@@ -78,9 +78,9 @@
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <span class="quote-mark">“</span>We want to shift the mindset of appraisers and the real estate industry as a whole.  For example, an individual is selling a house and in order to sell it, the code requires a working heating system.  Rather than put in a quality, high-efficiency system, they opt for the cheapest thing they can to meet the minimum bar.  The new owners are unlikely to rip out a brand new existing system, keeping the market for cheap inefficient systems afloat.
         </blockquote>
-        <p class="quote-citation">-Ut enim ad minim veniam</p>
+        <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
 
     <div class="container">
@@ -119,7 +119,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Bringing the Outside In</h2>
-                        <p class="body-md"> In LilyPad, tall walls of windows create a seemless bridge between the outdoor with the indoor spaces. The backyard grass comes as close to the door as possible, so you step right out into your lawn. Gathering spaces in the backyard and side yard connect directly to the kitchen and catch the setting evening sun – perfect for dinner parties. </p>
+                        <p class="body-md"> In LilyPad, tall walls of windows create a seamless bridge between the outdoor with the indoor spaces. The backyard grass comes as close to the door as possible, so you step right out into your lawn. Gathering spaces in the backyard and side yard connect directly to the kitchen and catch the setting evening sun – perfect for dinner parties. </p>
                     </div>
                 </div>
 
